--- a/bindings/csharp/XitariLibraryManagedDll/XitariLibraryManagedDll.csproj
+++ b/bindings/csharp/XitariLibraryManagedDll/XitariLibraryManagedDll.csproj
@@ -49,7 +49,7 @@
     <Compile Include="SwigProxyClasses\IntVector.cs" />
     <Compile Include="SwigProxyClasses\SizeTVector.cs" />
     <Compile Include="SwigProxyClasses\SWIGTYPE_p_int.cs" />
-    <Compile Include="SwigProxyClasses\SWIGTYPE_p_unsigned_char.cs" />
+    <Compile Include="SwigProxyClasses\UCharVector.cs" />
     <Compile Include="SwigProxyClasses\XitariALE.cs" />
     <Compile Include="SwigProxyClasses\XitariLib.cs" />
     <Compile Include="SwigProxyClasses\XitariLibPINVOKE.cs" />
