--- a/XitariLibraryCSBinding/XitariLibraryCSBinding.vcxproj.filters
+++ b/XitariLibraryCSBinding/XitariLibraryCSBinding.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="xitari_cs_wrap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="circular_queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="XitariALE.cpp">
